--- a/argocd-second-value/values.yaml
+++ b/argocd-second-value/values.yaml
@@ -1,2 +1,5 @@
+# Default values for my-nginx-heml.
+# This is a YAML-formatted file.
+# Declare variables to be passed into your templates.
 podAnnotations:
-  from_argocd: "Deployed_Success"
+	from_argocd: "Deployed_from_argocd"
